	orthogonalization algorithm in the Fortran code presumably shared
	between vegan:decorana and Canoco.

	* specaccum: first step in implementing weights on
	method="random".  Not yet documented nor supported.  Issues that
	must be solved are plotting (all lines? summaries?), summarizing
	(use approx to get average predictions?) and the very natural link
	to fitspecaccum models.

	* FAQ updates: using 'select' in ordination text() and points(),
	using 'xlim' to flip axes or zoom into ordination plot(), the
	non-effects of 'strata' in adonis(). All these indeed are
	frequently asked.
	
Version 1.18-22 (closed February 16, 2011)

	* nestednodf: did not go to 'weighted = FALSE' with quantitative
	data if 'order = FALSE'. Reported by Daniel Spitale.  

	* eigenvals: learnt to know 'dudi' objects of the ade4 package,
	and 'pco' an 'pca' obejct of the labdsv package.

	* betadisper: streamlined code somewhat.

	* prestonfit: implemented splitting "tied" counts (1, 2, 4, 8 etc)
	between octaves following Williamson & Gaston (J Anim Ecol 43,
	381-399; 2005) with argument 'tiesplit = TRUE'
	
	* specaccum: fixed typo -- 'individuals' instead of
	'invidividuals'. plot() gained argument to use "individuals" as
	x-axis instead of "sites" with method = "rarefaction".
	
Version 1.18-21 (closed January 19, 2011)

	* Fixes bug report #945 at R-Forge: anova.cca should now work with
	subset, missing data, functions of constraints (like log(x)),
	constraints or subset variables in data=, attached data frames or
	in working environments. 

	* capscale: return additive constant ('ac') when 'add = TRUE'. 

	* fitted.capscale, predict.rda: additive constant ('ac')
	subtracted from the estimated distances when 'add = TRUE' was used
	in capscale().

	* predict.rda: type = "working" for capscale returns now scaled
	scores that produce the dissimilarities as Euclidean distances --
	like was claimed in the help page.

	* simulate.capscale: implemented simulate() for capscale. This